[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.11.1"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.2.4", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
